--- a/views/index.html
+++ b/views/index.html
@@ -21,6 +21,11 @@
 </head>
 
 <body>
+    <div style="position:absolute;margin-top:50px;font-weight:bold;">
+        <p style="color:red">X axis</p>
+        <p style="color:green">Y axis</p>
+        <p style="color:blue">Z axis</p>
+    </div>
     <!-- Debug -->
     <script type="text/javascript" src="JS/stats.min.js"></script>
 
