scene and object3D classes

--- a/views/index.html
+++ b/views/index.html
@@ -27,7 +27,7 @@
         <p style="color:blue">Z axis</p>
     </div>
     <!-- Debug -->
-    <script type="text/javascript" src="JS/stats.min.js"></script>
+    <script type="text/javascript" src="JS/game/stats.min.js"></script>
 
     <script type="importmap">
         {
@@ -38,7 +38,7 @@
     </script>
 
     <!-- ThreeJS -->
-    <script type="module" src="JS/app.js"></script>
+    <script type="module" src="./JS/game/app.js"></script>
 </body>
 
 </html>
