--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  border: none;
-  box-sizing: border-box;
-}
 html,
 body {
   height: 100%;
@@ -11,22 +5,28 @@ body {
 body {
   background: #726868;
   font-family: 'Raleway', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 #top {
   display: flex;
   align-items: flex-start;
+  justify-content: space-around;
 }
 #top .containers {
   display: flex;
   flex-direction: column;
 }
 #top .containers .progress-container {
-  margin-left: 100px;
-  display: flex;
   border: solid #35354d;
-  background-color: black;
   height: 30px;
   width: 400px;
+  background: #ff0000;
+  background: linear-gradient(90deg, #ff0000 54%, #000000 55%, #000000 100%);
+  text-align: center;
+  font-size: x-large;
+  font-style: italic;
+  color: white;
 }
 #top .containers .progress-container .progress {
   height: 100%;
@@ -37,14 +37,6 @@ body {
 }
 #top .containers .progress-container .text {
   text-align: center;
-  z-index: 2;
-  position: fixed;
-  width: 400px;
-  margin-left: 100px;
-  left: 0;
-  font-size: x-large;
-  font-style: italic;
-  color: white;
 }
 #shop-button {
   height: 50px;
@@ -52,27 +44,63 @@ body {
   border-radius: 10%;
   cursor: pointer;
 }
-/* The Modal (background) */
+/* -------------------------------------------------------------------------- */
+/*                                    Modal                                   */
+/* -------------------------------------------------------------------------- */
 .modal {
-  position: absolute;
-  display: none;
-  justify-content: center;
-  align-items: center;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.8);
-}
-/* Modal Content/Box */
-.modal-content {
-  overflow: auto;
-  width: 600px;
+  padding: 0;
   height: 600px;
-  /* max-height: 600px;
-    max-width: 600px; */
-  padding: 20px;
-  background-color: #fff;
+  width: 600px;
+  max-height: 600px;
+  max-width: 600px;
+}
+.modal::backdrop {
+  background: rgba(0, 0, 0, 0.6);
+}
+.modal-content {
+  padding: 1rem;
+  display: block;
+  margin: auto;
+  text-align: center;
+}
+.modal[open] {
+  animation: slide-up 100ms forwards, fade-in 250ms forwards;
+}
+.modal[open]::backdrop {
+  animation: fade-in 250ms forwards;
+}
+.modal[closing] {
+  display: block;
+  pointer-events: none;
+  inset: 0;
+  animation: fade-out 250ms forwards;
+}
+.modal[closing]::backdrop {
+  animation: fade-out 250ms forwards;
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fade-out {
+  100% {
+    opacity: 0;
+  }
+  0% {
+    opacity: 1;
+  }
+}
+@keyframes slide-up {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
 }
 /* The Close Button */
 .close {
@@ -87,11 +115,6 @@ body {
   text-decoration: none;
   cursor: pointer;
 }
-/* Séparation avec style du contenu */
-.modal-content {
-  text-align: center;
-  margin: auto;
-}
 #switch_shop {
   display: flex;
   flex-direction: row;
@@ -104,11 +127,4 @@ body {
 #switch_shop .selected {
   color: #faa200;
   font-weight: bold;
-}
-.modal table {
-  margin: 0 auto;
-}
-.modal table,
-.modal td {
-  border: solid black 1px;
 }
