--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ body {
   margin: 0;
   padding: 0;
 }
+/* -------------------------------------------------------------------------- */
+/*                                Progress Bar                                */
+/* -------------------------------------------------------------------------- */
 #top {
   display: flex;
   align-items: flex-start;
@@ -48,19 +51,21 @@ body {
 /*                                    Modal                                   */
 /* -------------------------------------------------------------------------- */
 .modal {
+  height: 700px;
+  width: 1200px;
   padding: 0;
-  height: 600px;
-  width: 600px;
-  max-height: 600px;
-  max-width: 600px;
+}
+.modal #title-modal {
+  margin-top: 0;
+  padding: 1rem;
 }
 .modal::backdrop {
   background: rgba(0, 0, 0, 0.6);
 }
 .modal-content {
-  padding: 1rem;
-  display: block;
-  margin: auto;
+  height: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
   text-align: center;
 }
 .modal[open] {
@@ -102,7 +107,9 @@ body {
     transform: translateY(0%);
   }
 }
-/* The Close Button */
+/* -------------------------------------------------------------------------- */
+/*                                Close Button                                */
+/* -------------------------------------------------------------------------- */
 .close {
   color: #aaa;
   float: right;
@@ -127,4 +134,63 @@ body {
 #switch_shop .selected {
   color: #faa200;
   font-weight: bold;
+}
+/* -------------------------------------------------------------------------- */
+/*                                    Shop                                    */
+/* -------------------------------------------------------------------------- */
+#shop {
+  display: grid;
+  grid-template-columns: 2fr 2fr 1fr;
+  grid-auto-rows: minmax(30px, auto);
+}
+#shop .rubric {
+  border: solid 2px black;
+}
+#shop .clickable:hover:not(.selected) {
+  color: #faa200;
+  background-color: rgba(51, 255, 0, 0.2);
+  text-decoration: none;
+  cursor: pointer;
+}
+#shop #main-title {
+  grid-column: 1/2;
+  grid-row: 1/2;
+  border-bottom: none;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  align-items: center;
+}
+#shop #main-title .clickable {
+  padding: 5%;
+}
+#shop #supplier {
+  grid-column: 3/4;
+  grid-row: 2/3;
+  display: grid;
+  grid-template-columns: 4fr;
+}
+#shop #supplier .clickable {
+  padding: 12.5%;
+}
+#shop #left-page {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+#shop #right-page {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  border-left: none;
+  border-right: none;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+#shop #left-page div,
+#shop #right-page div {
+  margin: 1rem;
+  border: dashed 2px black;
+}
+.selected {
+  background-color: red;
 }
