--- a/css/style.less
+++ b/css/style.less
@@ -1,6 +1,7 @@
 html,
 body {
     height: 100%;
+
 }
 
 body {
@@ -12,7 +13,9 @@ body {
 
 }
 
-
+/* -------------------------------------------------------------------------- */
+/*                                Progress Bar                                */
+/* -------------------------------------------------------------------------- */
 
 #top {
     display: flex;
@@ -67,14 +70,16 @@ body {
 /* -------------------------------------------------------------------------- */
 
 .modal {
+    height: 700px;
+    width: 1200px;
+
     padding: 0;
 
-    // justify-content: center;
-    // align-items: center;
-    height: 600px;
-    width: 600px;
-    max-height: 600px;
-    max-width: 600px;
+    #title-modal {
+        margin-top: 0;
+        padding: 1rem;
+    }
+
 }
 
 .modal::backdrop {
@@ -82,10 +87,10 @@ body {
 }
 
 .modal-content {
-    padding: 1rem;
-    display: block;
+    height: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
 
-    margin: auto;
     text-align: center;
 }
 
@@ -139,24 +144,10 @@ body {
     }
 }
 
-// .modal {
-//     background: rgba(0, 0, 0, 0.8);
-// }
 
-// /* Modal Content/Box */
-// .modal-content {
-//     overflow: auto;
-//     width: 600px;
-//     height: 600px;
-
-//     /* max-height: 600px;
-//     max-width: 600px; */
-
-//     padding: 20px;
-//     background-color: #fff;
-// }
-
-/* The Close Button */
+/* -------------------------------------------------------------------------- */
+/*                                Close Button                                */
+/* -------------------------------------------------------------------------- */
 .close {
     color: #aaa;
     float: right;
@@ -187,11 +178,89 @@ body {
     font-weight: bold;
 }
 
-// .modal table {
-//     margin: 0 auto;
-// }
+/* -------------------------------------------------------------------------- */
+/*                                    Shop                                    */
+/* -------------------------------------------------------------------------- */
 
-// .modal table,
-// .modal td {
-//     border: solid black 1px;
-// }
+#shop {
+    display: grid;
+    grid-template-columns: 2fr 2fr 1fr;
+    //grid-template-rows: 30px 3fr;
+    grid-auto-rows: minmax(30px, auto);
+
+    .rubric {
+        border: solid 2px black;
+    }
+
+    // .clickable {
+    //     align-items: center;
+    // }
+
+    .clickable:hover:not(.selected) {
+        color: #faa200;
+        background-color: rgba(51, 255, 0, 0.2);
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+
+    #main-title {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        border-bottom: none;
+
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        align-items: center;
+
+        .clickable{
+            padding: 5%;
+        }
+    }
+
+    #supplier {
+        grid-column: 3/4;
+        grid-row: 2/3;
+
+        display: grid;
+        grid-template-columns: 4fr;
+
+        .clickable {
+            padding: 12.5%;
+        }
+
+    }
+
+    #left-page {
+        grid-column: 1/2;
+        grid-row: 2/3;
+
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+
+    }
+
+    #right-page {
+        grid-column: 2/3;
+        grid-row: 2/3;
+
+        border-left: none;
+        border-right: none;
+
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+
+    }
+
+    #left-page div, #right-page div{
+        margin: 1rem;
+        // height: 8rem;
+        border: dashed 2px black;
+
+    }
+ 
+}
+
+.selected{
+    background-color: red;
+}
