--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -19,6 +19,9 @@
     <!-- HTTP JS module -->
     <script src="JS/http.js" type="text/javascript"></script>
     <script src="/socket.io/socket.io.js"></script>
+
+    <!-- JS modules -->
+    <script src="JS/http.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -28,8 +31,10 @@
         <!-- Scoreboard -->
         <section class="scoreboard" id="scoreboard">
             <h2>
-                <ion-icon name="ribbon"></ion-icon>Your 3 best scores :
+                <ion-icon name="help"></ion-icon>SAY MY NAME !
             </h2>
+            <label for="pseudo_input">My pseudo</label>
+            <input type="text" name="pseudo" placeholder="TheTK78" id="pseudo_input" />
         </section>
 
         <hr />
