Three : Base code, importe plane geometry

--- a/views/index.html
+++ b/views/index.html
@@ -26,6 +26,8 @@
         <p style="color:green">Y axis</p>
         <p style="color:blue">Z axis</p>
     </div>
+
+    <canvas id="myThreeJsCanvas"></canvas>
     <!-- Debug -->
     <script type="text/javascript" src="JS/game/stats.min.js"></script>
 
