--- a/views/game.ejs
+++ b/views/game.ejs
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GAme</title>
+    <title>Game</title>
+
+    <!-- JS modules -->
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
+    <ul id="player_list"></ul>
     
+    <script src="JS/WebSocket.js" type="text/javascript"></script>
+    <script src="JS/game.js" type="text/javascript"></script>
 </body>
 </html>
