deconnexion et récupération des infos de l'utilisateur

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -10,6 +10,8 @@
     <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
+    <h1><%= username %></h1>
+
     <ul id="player_list"></ul>
     
     <script src="JS/WebSocket.js" type="text/javascript"></script>
