--- a/views/game.ejs
+++ b/views/game.ejs
@@ -8,6 +8,7 @@
 
     <!-- JS modules -->
     <script src="/socket.io/socket.io.js"></script>
+    <script src="JS/http.js" type="text/javascript"></script>
 </head>
 <body>
     <h1><%= username %></h1>
