--- a/views/game.ejs
+++ b/views/game.ejs
@@ -14,6 +14,8 @@
     <h1><%= username %></h1>
 
     <ul id="player_list"></ul>
+
+    <input type="hidden" value="<%= username %>" id="username" />
     
     <script src="JS/WebSocket.js" type="text/javascript"></script>
     <script src="JS/game.js" type="text/javascript"></script>
