--- a/views/game.ejs
+++ b/views/game.ejs
@@ -16,8 +16,14 @@
     <ul id="player_list"></ul>
 
     <input type="hidden" value="<%= username %>" id="username"/>
+
+    <ul id="messages"></ul>
+    <form id="chatForm" action="">
+        <input id="input-chat" autocomplete="off" /><button>Send</button>
+    </form>
     
     <script src="JS/WebSocket.js" type="text/javascript"></script>
     <script src="JS/game.js" type="text/javascript"></script>
+    <script src="JS/chat.js" type="text/javascript"></script>
 </body>
 </html>
