listener start game

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -15,6 +15,8 @@
 
     <ul id="player_list"></ul>
 
+    <button type="submit" id="BtnGame" style="display: none;">Start Game !</button>
+
     <input type="hidden" value="<%= username %>" id="username"/>
 
     <ul id="messages"></ul>
