--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
     <title>Don't Collapse</title>
     <style media="screen" type="text/css">
+        @import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
         body {
             background-color: #fff;
         }
@@ -27,7 +30,7 @@
         <p style="color:blue">Z axis</p>
     </div>
 
-    <canvas id="myThreeJsCanvas"></canvas>
+    <canvas id="myThreeJsCanvas"></canvas>  
     <!-- Debug -->
     <script type="text/javascript" src="JS/game/stats.min.js"></script>
 
