deconnexion bug resolve

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -33,7 +33,7 @@
 
     <script src="JS/WebSocket.js" type="text/javascript"></script>
     <script src="JS/game.js" type="text/javascript"></script>
-    <script src="JS/chat.js" type="text/javascript"></script>
+    <!-- <script src="JS/chat.js" type="text/javascript"></script> -->
 </body>
 
 </html>
