--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -24,15 +24,19 @@
 
 <body>
     <main>
-        <h1>Welcome</h1>
+        <h1>Welcome on lobby</h1>
 
         <!-- Scoreboard -->
         <section class="scoreboard" id="scoreboard">
             <h2>
                 <ion-icon name="help"></ion-icon>SAY MY NAME !
             </h2>
-            <label for="pseudo_input">My pseudo</label>
-            <input type="text" name="pseudo" placeholder="TheTK78" id="pseudo_input" />
+            <div id="pseudo">
+                <label for="pseudo_input">
+                    <h3>Pseudo</h3>
+                </label>
+                <input type="text" name="pseudo" placeholder="Jean Mich du 59" id="pseudo_input" />
+            </div>
         </section>
 
         <hr />
