--- a/views/rules.ejs
+++ b/views/rules.ejs
@@ -3,18 +3,18 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Don't Collapse</title>
-    <meta name="description" content="Don't Collapse game by Zephyr Studio" />
+    <title>Rules</title>
+    <meta name="description" content="Don't Collapse rules"/>
     <meta name="author" content="Zephyr Studio" />
     <link rel="stylesheet" href="CSS/style.css" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=KoHo:wght@300&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=KoHo:wght@300&display=swap" rel="stylesheet"/>
 
-    <link rel="icon" type="image/png" sizes="16x16" href="img/ZephyrStudio_logo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="img/ZephyrStudio_logo.png"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
@@ -52,19 +52,31 @@
         </nav>
     </header>
 
-    <main class="home-main" id="home_main">
+    <main class="rules-main" id="home_main">
         <!-- Text displayed in the home page -->
-        <img src="img/DontCollapse_logo.png" alt="Don't Collapse logo">
-        <section class="home-content">
-            <h1>Don't Collapse</h1>
-            <h2>A game by Zephyr Studio</h2>
-
-            <section class="btn_xl">
-                <a href="/lobby" title="Click to connect">Play</a>
-            </section>
+        <section class="rules-content">
+            <h1>Rules :</h1>
+            <p>
+                To win this game, you must sheer all of your enemy shepard sheeps. To achieve this mission, some weapons
+                are
+                available :
+            </p>
+            <ul>
+                <li><strong>Sheers :</strong> The basic weapon, sheer the target point;</li>
+                <li><strong>Strimmer :</strong> <i>Only once during the game,</i> cut the 9 cases near to the target
+                    point;
+                </li>
+                <li><strong>Baldness epidemic :</strong> <i>Only once during the game,</i> Sheer 5 cases near to the
+                    target
+                    point;
+                </li>
+                <li><strong>Wolf :</strong> <i>Only once during the game,</i> Sheer a whole flock if it contains only 2
+                    sheeps or
+                    less.</li>
+            </ul>
         </section>
     </main>
-
+    
     <footer>
         <p>CIRious Game 2022 - Zephyr Studio</p>
         <p>Declemy Maxime &#x2759 Delebecque Martin &#x2759 Marquant Enguerrand &#x2759 Mullier Tom &#x2759 Van Boxem
