--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -142,6 +142,12 @@ header a {
   width: auto;
 }
 .home-main .home-content {
+  background-color: rgba(56, 51, 49, 0.6);
+  border-radius: 20px;
+  padding-left: 5em;
+  padding-right: 5em;
+  padding-top: 2em;
+  padding-bottom: 2em;
   text-align: left;
   text-transform: uppercase;
 }
@@ -150,6 +156,7 @@ header a {
   text-shadow: 1px 2px 3px black;
   font-family: 'KoHo', sans-serif;
   padding: 0%;
+  margin-top: 0%;
   margin-bottom: 2%;
   letter-spacing: 0.15rem;
 }
@@ -177,6 +184,12 @@ header a {
   width: 90%;
 }
 .rules-main .rules-content {
+  background-color: rgba(56, 51, 49, 0.6);
+  border-radius: 20px;
+  padding-left: 10em;
+  padding-right: 10em;
+  padding-top: 3em;
+  padding-bottom: 3em;
   text-align: left;
   font-family: 'KoHo', sans-serif;
 }
@@ -185,6 +198,7 @@ header a {
   text-shadow: 1px 2px 3px black;
   padding: 0%;
   margin-bottom: 2%;
+  margin-top: 0%;
   letter-spacing: 0.15rem;
   text-transform: uppercase;
 }
