--- a/public/CSS/style.less
+++ b/public/CSS/style.less
@@ -189,6 +189,12 @@ header {
     }
 
     .home-content {
+        background-color: rgba(56, 51, 49, 0.6);
+        border-radius: 20px;
+        padding-left: 5em;
+        padding-right: 5em;
+        padding-top: 2em;
+        padding-bottom: 2em;
         text-align: left;
         text-transform: uppercase;
 
@@ -197,6 +203,7 @@ header {
             text-shadow: 1px 2px 3px black;
             font-family: @primary-font, @secondary-font;
             padding: 0%;
+            margin-top: 0%;
             margin-bottom: 2%;
             letter-spacing: 0.15rem;
         }
@@ -230,6 +237,12 @@ header {
     width: 90%;
 
     .rules-content {
+        background-color: rgba(56, 51, 49, 0.6);
+        border-radius: 20px;
+        padding-left: 10em;
+        padding-right: 10em;
+        padding-top: 3em;
+        padding-bottom: 3em;
         text-align: left;
         font-family: @primary-font, @secondary-font;
 
@@ -238,6 +251,7 @@ header {
             text-shadow: 1px 2px 3px black;
             padding: 0%;
             margin-bottom: 2%;
+            margin-top: 0%;
             letter-spacing: 0.15rem;
             text-transform: uppercase;
         }
