--- a/views/game.ejs
+++ b/views/game.ejs
@@ -11,7 +11,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="JS/http.js" type="text/javascript"></script>
 
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/hud.css">
 
 </head>
 
@@ -405,11 +405,12 @@
         <div class="modal-content">
             <span class="close-button" id="close-chat">&times;</span>
             <h2 id="title-modal">Alors qu'est ce que ca dit ?</h2>
-
-            <div id="messages"></div>
+            
             <form id="chatForm" action="">
                 <input id="input-chat" autocomplete="off" /><button>Send</button>
             </form>
+            <div id="messages"></div>
+            
         </div>
     </dialog>
 
